syntax = "proto3";

package proto;

import "google/api/annotations.proto";



// StringMessage is message
message StringMessage {
  string value = 1;
}

// EchoService is used to validate that APIs with complicated
// proto messages and URL templates are still processed correctly.
service EchoService { 

  // Echo allows posting a StringMessage value.
  //
  // It also exposes multiple bindings.
  //
  // This makes it useful when validating that the OpenAPI v2 API
  // description exposes documentation correctly on all paths
  // defined as additional_bindings in the proto. 
  rpc Echo(StringMessage) returns (StringMessage) {
    option (google.api.http) = {
      post: "/v1/echo"
      body: "*"
    };
  }
}

message RegisterUserRequest {
  string username =1;
  string email = 2;
  string firstname = 3;
  string lastname = 4;
  string captcha = 5;
}

message RegisterUserResponse {
  string id = 1;
}

service UserService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {
    option (google.api.http) = {
      post: "/v1/registeruser"
      body: "*"
    };
  }
}

